kubernetes/hazelcast/hazelcast-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hazelcast
spec:
  selector:
    matchLabels:
      app: hazelcast
  replicas: 1
  template:
    metadata:
      labels:
        app: hazelcast
    spec:
      containers:
      - name: hazelcast
        image: hazelcast/hazelcast:3.12.5
        ports:
        - containerPort: 5701
