kubernetes/hazelcast/hazelcast-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hazelcast
  labels:
    app: hazelcast
spec:
  replicas: 1
  serviceName: hazelcast
  selector:
    matchLabels:
      app: hazelcast
  template:
    metadata:
      labels:
        tier: backend
        component: cache
        app: hazelcast
    spec:
      containers:
        - name: hazelcast
          image: hazelcast/hazelcast:5.7.0
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /hazelcast/health/node-state
              port: 5701
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /hazelcast/health/node-state
              port: 5701
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          ports:
            - containerPort: 5701
            - containerPort: 8080
          volumeMounts:
            - name: hazelcast-storage
              mountPath: /data/hazelcast
      volumes:
        - name: hazelcast-storage
          configMap:
            name: hazelcast-configmap
