kubernetes/hazelcast/hazelcast-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-manager
spec:
  type: ClusterIP
  selector:
    app: hazelcast-manager
  ports:
  - protocol: TCP
    port: 8080
