kubernetes/hazelcast/hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: hazelcast
  ports:
  - name: hazelcast
    port: 5701
